--- a/template/rainbow/send.ejs
+++ b/template/rainbow/send.ejs
@@ -10,11 +10,11 @@
         <p style="font-size:15px;word-break:break-all;padding: 23px 32px;margin:0;background-color: hsla(0,0%,100%,.4);border-radius: 10px 10px 0 0;">您在<a style="text-decoration:none;color: #ffffff;" href="<%=siteUrl%>"> <%=siteName%> </a>上的留言有新回复啦！ </p> 
        </div> 
        <div style="margin:40px auto;width:90%"> 
-        <p><%=pname%> 同学，您曾在文章上发表评论：</p> 
+        <p><strong>"<%=pname%>"</strong> 同学，您曾在文章上发表评论：</p> 
         <div style="background: #fafafa repeating-linear-gradient(-45deg,#fff,#fff 1.125rem,transparent 1.125rem,transparent 2.25rem);box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);margin:20px 0px;padding:15px;border-radius:5px;font-size:14px;color:#555555;"><%-ptext%></div> 
-        <p><%=name%> 给您的回复如下：</p> 
+        <p><strong>"<%=name%>"</strong> 给您的回复如下：</p> 
         <div style="background: #fafafa repeating-linear-gradient(-45deg,#fff,#fff 1.125rem,transparent 1.125rem,transparent 2.25rem);box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);margin:20px 0px;padding:15px;border-radius:5px;font-size:14px;color:#555555;"><%-text%></div> 
-        <p>您可以点击 <a style="text-decoration:none; color:#12addb" href="<%=url%>#comments">查看回复的完整內容 </a>，欢迎再次光临 <a style="text-decoration:none; color:#12addb" href="<%=siteUrl%>"> <%=siteName%> </a>。</p> 
+        <p>您可以点击 <a style="text-decoration:none; color:#12addb" href="<%=url%>#comments">查看回复的完整內容 </a>，欢迎再次光临 <a style="text-decoration:none; color:#12addb" href="<%=siteUrl%>"> <%=siteName%> ♡゛♡゛♡゛</a>。</p> 
         <style type="text/css">a:link{text-decoration:none}a:visited{text-decoration:none}a:hover{text-decoration:none}a:active{text-decoration:none}</style> 
        </div> 
       </div> </td>
